# effective_modes

./: .gitignore  Cargo.toml  README.md
src/: ardof.rs  backend.rs  dispersion_plot.rs  ell_n.rs  main.rs  parameters.rs  vsc_rate.rs
