[package]
name = "effective_modes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.4.6"
plotters = "0.3.5"
ndarray = "0.16.1"
gnuplot = "0.0.45"
statrs = "0.18.0"
ndarray-linalg = "0.17.0"
ndarray-npy = "0.9.1"
rayon = "1.10.0"